example-vouting-app/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-service
    app: demo-nginx-app
spec:
  type:  LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: nginx-pod
    app: demo-nginx-app
