example-vouting-app/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    - name: db-service
      app: demo-voting-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
    app: demo-voting-app
