example-vouting-app/voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    - name: voting-service
      app: demo-voting-app
spec:
  type:  LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: voting-app-pod
    app: demo-voting-app
